Fixed a centering issue in the pasta menu section on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ th {
   text-align: center;
   width: 60%;
   margin: 0 auto;
+  padding: 0;
 }
 #sauce-options li {
   padding-top: 15px;
